--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/cli": "^4.20.1",
     "@sanity/client": "^7.13.1",
     "@sanity/image-url": "^2.0.1",
+    "flipclock": "^1.0.1",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
